<resources>
    <string name="app_name">Qualina</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="txt_game_intro">INTRODUCTION TO THE GAME</string>
    <string name="whatisyourname">What is your name?</string>
    <string name="input_name">Input Name Here</string>
    <string name="start">Start</string>
    <string name="mN">mN</string>
    <string name="proceed">Proceed</string>
    <string name="intro_exercise">INTRODUCTION TO THE EXERCISES/EXPERIMENTS</string>
    <string name="player_name_string">Player Name</string>
    <string name="score_0_15">SCORE: 0/15</string>
    <string name="your_unknown_sample_code_is">YOUR UNKNOWN SAMPLE CODE IS:</string>
    <string name="conduct_flame_test">Do you want to conduct a flame test?</string>
    <string name="decision_1">Decision 1</string>
    <string name="decision_2">Decision 2</string>
    <string name="decision_3">Decision 3</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="what_next">What\'s next?</string>
    <string name="precipitate_sample">Precipitate the sample and Centrifuge.</string>
    <string name="transfer_cent_totube">Transfer the centrifugate/liquid to a centrifuge tube.</string>
    <string name="cent_or_res">Would you like to proceed with the centrifugate or the residue?</string>
    <string name="residue">Residue</string>
    <string name="centrifugate">Centrifugate</string>
    <string name="step_wash_cold">Wash sample (solids) with 10 drops of COLD distilled water. Add 2 drops of room temperature distilled water.</string>
    <string name="step2">Heat in boiling water bath for 3 minutes with constant stirring. Centrifuge quickly and decant supernatant liquid while sample is HOT.</string>
    <string name="add_3d_1mki">Add 3 drops of 1 M KI.</string>
    <string name="step5_acidity_lptest">The acidity of the sample was tested via litmus paper test.</string>
    <string name="next">Next</string>
    <string name="lp_stay_red_stay_blue">Red litmus paper stayed red, while blue litmus paper stayed blue.</string>
    <string name="set_aside_cent">Centrifugate will be set aside.</string>
    <string name="combine">Combine with the previous centrifugate.</string>
    <string name="step_heat_10_min">Heat the liquid for 10 minutes in boiling water bath. Cool for 2 minutes in a cold water bath then add 6 M HCI dropwise until acidic.</string>
    <string name="lp_bluetored">The blue litmus paper turned red.</string>
    <string name="step_take_2d_add_6mhci">Take 2 drops of the liquid and place onto a centrifuge tube. Add 6 M HCI dropwise until acidic.</string>
    <string name="step_add2ml_discard_centri">Add 2 mL distilled water, stir and heat for 10 minutes in a boiling water bath. Centrifuge and discard centrifugate/liquid.</string>
    <string name="step_wash_res_discard_res">Wash the residue/solids with 2 mL distilled water then add 10 drops of 6 M HCI. Stir and heat for two minutes. Discard any precipitates/solids.</string>
    <string name="what_to_do">What would you like to do?</string>
    <string name="add_3d_1mkscn">3 drops of 0.1 M KSCN</string>
    <string name="add_10drops_6mnaoh">10 drops of 6 M NaOH</string>
    <string name="combine_10d_centtube">Combine with 10 drops of the sample in a centrifuge tube.</string>
    <string name="add_40d_5m_ammoxa">Add 40 drops of 0.5 M ammonium oxalate. Stir thoroughly and centrifuge.</string>
    <string name="heat_to_dry_again">Heat to dryness again then cool for 5 minutes.</string>
    <string name="transfer_quant_min_amounts_12mhci">Transfer quantitatively into a centrifuge tube using minimal amounts of 12 M HCI.</string>
    <string name="lp_redtoblue">Red litmus paper turned blue.</string>
    <string name="add_40d_ammox">Add 40 drops of 0.5 M ammonium oxalate. Stir thoroughly and centrifuge.</string>
    <string name="wash_10d_6mhci">Wash the precipitate with 10 drops of distilled water and dissolve the precipitate using 6 M HCI dropwise.</string>
    <string name="heat_to_dry">Heat to dryness in low heat then cool for 5 minutes.</string>
    <string name="dissolve_transfer">Dissolve the residue in 5 drops of 6 M HCI and transfer quantitatively in a centrifuge tube using distilled water.</string>
    <string name="lp_blue_slightred">Blue litmus paper turned slightly red.</string>
    <string name="cool_1_min">Cool for 1 minute by swirling in cold temperature then centrifuge.</string>
    <string name="add_10_15d_dime">Add 10 - 15 drops of 1% dimethylglyoxime (DMG).</string>
    <string name="add_2d_6m_acetic">Add 2 drops of 6 M acetic acid to make it slightly acidic.</string>
    <string name="add_50d_pasteur">Add 50 drops of 6 M NaOH using Pasteur pipet. Stir and centrifuge. Quickly transfer the centrifugate to a centrifuge tube.</string>
    <string name="wash_twice_10drops">Wash it twice with 10 drops of distilled water.</string>
    <string name="add_6mhci_discard_res">Add 6 drops of 6 M HCI then stir. Centrifuge and quickly transfer the centrifugate into a centrifuge tube. Discard the residue.</string>
    <string name="what_to_add">What would you like to add?</string>
    <string name="add_sodium_sulfite">Add Sodium Sulfite.</string>
    <string name="add_6macetic">Add 6 M acetic acid dropwise with stirring until slightly acidic.</string>
    <string name="clean_pat_wire">Clean the platinum wire loop by dipping it into clean concentrated HCI then heating it over direct flames until the wire loop is red-hot. Repeat this process until the wire loop imparts no appreciable color to the flame.</string>
    <string name="evap_2d_cent_discard_solids">Evaporate to about 2 drops of the centrifugate. Cool and discard any precipitates/solids formed.</string>
    <string name="add_1d_input_wire">Add 1 drop of concentrated HCI then dip the cleaned wire loop to the solution to be tested. Insert the wire loop into the oxidizing zone of the flame.</string>
    <string name="observe_flame_blue_filter">Observe the flame through blue filter.</string>
    <string name="place_10_make_6mnaoh_add2">Place 10 drops of this solution in an evaporating dish. Make it alkaline with 6 M NaOH, then add 2 more drops.</string>
    <string name="watchglass_lp">On the underside of a watchglass, attach a wet red litmus paper then use that watchglass to cover the dish. Warm the solution but do not boil.</string>
    <string name="text_sample_tested">Your sample was tested for the presence of other Cations.</string>
    <string name="sample_tested_groups">Your sample was tested for the presence of Cations from other groups.</string>
    <string name="text_no_notable_sample">There were no notable observations on your sample.</string>
    <string name="str_return">Return</string>
    <string name="sample_beingtested">Your sample is being tested.</string>
    <string name="guess_your_cation">Guess your Cation</string>
    <string name="submit">Submit</string>
    <string name="note_you_have_3_attempts">Note: You have 3 attempts!</string>
    <string name="you_got_correct_answer">You got the correct answer!</string>
    <string name="try_again">Try Again</string>
    <string name="Flowcharts">Flowcharts</string>
    <string-array name="cationslist">
        <item><font fgcolor="#FFFFFF">Select a Cation</font></item>
        <item><font fgcolor="#FFFFFF">Ag<small><sup>+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Pb<small><sup>2+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Hg<small><sub>2</sub><sup>2+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Cr<small><sup>3+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Mn<small><sup>2+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Fe<small><sup>3+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Bi<small><sup>3+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Ba<small><sup>2+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Co<small><sup>2+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Ca<small><sup>2+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Sr<small><sup>2+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Mg<small><sup>2+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Ni<small><sup>2+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Cu<small><sup>2+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Cd<small><sup>2+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Zn<small><sup>2+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">K<small><sup>+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">Na<small><sup>+</sup></small></font></item>
        <item><font fgcolor="#FFFFFF">NH<small><sub>4</sub><sup>+</sup></small></font></item>
    </string-array>
</resources>