<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newlabbg"
    tools:context=".GameIntro">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_cat"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="164dp"
        android:src="@drawable/cat"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="296dp"
        android:background="@color/gray"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/whatisyourname"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edt_player_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_name"
        android:inputType="textPersonName|textCapSentences"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="24sp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/btn_start"
        android:visibility="gone"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/start"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

</android.support.constraint.ConstraintLayout>